# Wordly-C-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  button.cpp  button.hpp  colors.hpp  config.conf  history.json  main.cpp  parser.hpp  program  timer.cpp  timer.hpp  wordly.cpp  wordly.hpp  words.csv
server/src/: server.ts
src/: button.cpp  button.hpp  drawLogo.hpp  drawStats.cpp  leaderboard.cpp  leaderboard.hpp  main.cpp  timer.cpp  wordle.cpp  wordle.hpp  wordleDraw.cpp  wordleUsername.cpp  wordly.cpp
